--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
   <footer class="page__footer">
     <p>&copy Udacity</p>
   </footer>
+  <button id="btnBackTop">Back TO TOP</button>
   <script src="js/app.js"  type="text/javascript"></script>
 </body>
 </html>
